--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -233,7 +233,7 @@
                             <button class="border-0 rounded-start col-4 " required>OTP</button>
                             <input autocomplete="new-password"    id="id_otp"
                             type="text" class="form-control" name="password" placeholder="password">
-                            <button id=" " class="btn"></button>
+                            <button   class="btn"></button>
                     </div>
             
                 </div>
