--- a/views/custommerHomePage.ejs
+++ b/views/custommerHomePage.ejs
@@ -229,7 +229,7 @@
                                 
                             </div>
                             <div class="card-footer text-muted d-flex justify-content-end  rounded">
-                                <button onclick="cancelBooking(event.target.value)" value="<%= element.reservationNumber %>" class="btn btn-danger" >DELETE </button>
+                                <button onclick="cancelBooking(event.target.value)" value="<%= element.reservationNumber %>" class="btn btn-danger" >cancel </button>
                             <form action="/hotel/addoccupancy" method="post">
                                     <button onclick="addGuestDetails(event.target.value)" name="bookingID" value="<%= element.reservationNumber%>"  class="btn btn-primary  ">ADD GUEST </button>
                             </form>
