--- a/views/detailedSearch.ejs
+++ b/views/detailedSearch.ejs
@@ -9,8 +9,8 @@
                     <div class="col">
                         <!-- Main Search box Start here -->
                     <form action="/custom/customSearch" method="post"> 
-                        <div class="row" >
-                            <div class="col d-flex" >
+                        <div class=" row" >
+                            <div class="border border-light rounded col d-flex" >
                                 <button type="button" class="input-group-text text-light btn"style="background-color: transparent;" id="iDServiceImages1btn2">Location</button>
                                 <select name="ditrictName" type="text" value="<%= inputData.ditrictName %>"  id="idDitrictName"
                                     data-hotels="<%= JSON.stringify(generalData) %>" name="SearchText"
@@ -97,7 +97,7 @@
                             </div>
                             <div class="col "
                             style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button  onclick=""  type="submit" class="btn text-light  bi bi-search "> LOAD </button>
+                                <button  onclick=""  type="submit" class="btn h-100 w-100 text-light  bi bi-search "> LOAD </button>
                             </div>
                      
 
