--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,5 @@
-    <div class="container-fluid d-flex justify-content-end">
-        <label name="loggeduser" id="loggeduser" class="text text-secondary" for="">Test </label>
+    <div hidden class="container-fluid d-flex  justify-content-end">
+        <label name="loggeduser" hidden id="loggeduser" class="text text-secondary" for=""></label>
     </div>
 
     <script src="/Script/Script.js"> </script>  
