--- a/views/custommerPage.ejs
+++ b/views/custommerPage.ejs
@@ -12,8 +12,8 @@
             <div class=" container-fluid fixed" data-aos="fade-left" >
                <br><br><br><br><br><br><br>
                 <div class="container-fluid"  >
-                    <h1 id="idlaunchPageText" class="text-light col-11" style="font-size: 60px; font-family: poppins;" >Search your favorite desination </h1>
-                    <div class="  container-fluid   rounded border " style="  background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
+                  <h1 id="idlaunchPageText" class="container-fluid text-light" style="font-size: 60px; font-family: poppins;" >Search your favorite desination </h1>
+                    <div class="  container-fluid w-100 col-12 rounded border " style="  background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
                         <form action="/custom/customSearch" method="post">
                                 <div class="container-fluid btn d-flex  ">
                                   <h6 class="col-2 text-light ">Location </h6>
@@ -30,7 +30,10 @@
                                   </button>
                                 </div>
                       </form>
-                    </div>
+                    </div>  
+   
+  
+                  </div>
                 
                   
               </div>
