--- a/asset/style.css
+++ b/asset/style.css
@@ -207,4 +207,56 @@ body {
     background-size:contain  ;    
 }
 
- 
+.image-tile {
+    width: 200px; /* Adjust to your image size */
+    height: 180px; /* Adjust to your image size */
+    position: relative;
+    padding: 5px;
+  }
+  
+  .image-tile  {
+    width: 100%;
+    height: 100%;
+    transition: transform 1s; /* Add a smooth transition effect */
+  }
+  
+  .image-tile:hover  {
+    transform: scaleX(-1); /* Flip horizontally on hover */
+  }
+  
+  .hero-slider {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+}
+.hero-slider.owl-carousel .owl-dots {
+	position: absolute;
+	left: 0;
+	bottom: 23px;
+	width: 100%;
+	text-align: center;
+}
+.hero-slider.owl-carousel .owl-dots button {
+	height: 6px;
+	width: 6px;
+	background: #ffffff;
+	opacity: 0.5;
+	border-radius: 50%;
+	margin-right: 10px;
+	-webkit-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
+}
+.hero-slider.owl-carousel .owl-dots button.active {
+	width: 30px;
+	border-radius: 50px;
+	opacity: 1;
+}
+.hero-slider.owl-carousel .owl-dots button:last-child {
+	margin-right: 0;
+}
+.hero-slider .owl-stage-outer, .hero-slider .owl-stage, .hero-slider .owl-item, .hero-slider .hs-item {
+	height: 100%;
+}
