--- a/views/custommerPage.ejs
+++ b/views/custommerPage.ejs
@@ -3,50 +3,79 @@
 
     
 
-      <main>
-        <div class="container-fluid fixed"   id="top" style="height:730px; background-image: url('/Images/1694680589320-image (2).jpg');  background-position: center; background-size: cover;"> 
-
-
-
-          <div class="container-fluid position-relative" >
-            <div class=" container-fluid fixed" data-aos="fade-left" >
-               <br><br><br><br><br><br><br>
-                <div class="container-fluid"  >
-                  <h1 id="idlaunchPageText" class="container-fluid text-light" style="font-size: 60px; font-family: poppins;" >Search your favorite desination </h1>
-                    <div class="  container-fluid w-100 col-12 rounded border " style="  background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
-                        <form action="/custom/customSearch" method="post">
-                                <div class="container-fluid btn d-flex  ">
-                                  <h6 class="col-2 text-light ">Location </h6>
-                                  <select name="ditrictName" type="text" data-hotels="<%= JSON.stringify(generalData) %>" class="col-8  btn text-light fw-lighter" id="idSearchText" onchange="">
-                                    <option style="background-color:rgba(186, 90, 21, 0.748); font-size: large;" class="col-5 SearchTextBox text-light fw-LIGHTER" value=""> All Cities </option>
-                                      <% district.forEach(element=> { %>
-                                      <option style="background-color:rgba(186, 90, 21, 0.748); height: 100px;"class=" col-5 btn w-100 text-light fw-lighter" value="<%=element%>">
-                                        <%=element%>
-                                      </option>
-                                      <% }) %>
-                                  </select>
-                                  <button class="col-2 btn text-light bi bi-search">
-                                    FIND
-                                  </button>
-                                </div>
-                      </form>
-                    </div>  
-   
-  
-                  </div>
-                
-                  
-              </div>
-            
-            </div>
-
-           
-          </div>
-
-        </div>
-      </main>
       
-    </body>
+
+      
+        <div class="container-fluid  "   style="height:730px;  background-position: center; background-size: cover;"> 
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" style="height:730px" >
+                  <div class="carousel-inner h-100 bg-secondary">
+                    <% comp.forEach((element,index) => { %>
+                      <% if (index===0) { %>
+                      <div class="carousel-item h-100 active d-flex flex-column justify-content-center align-items-start h-100" style=" background-image: url('<%= element.image1 %>'); background-position: center; background-size: cover;">
+                        
+                        <div class="container-fluid w-100 col-lg-6 col-sm-12  rounded border flex-wrap" style="background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
+                             
+                            <form id="<%= element.CompanyID %>" action="/custom/customSearch" method="post"></form>
+                            <div class="container-fluid col-12 btn d-flex">
+                                <h6 class="col-2 text-light ">Location </h6>
+                                    <select class="col-8  btn text-light fw-lighter"  name="ditrictName" type="text" data-hotels="<%= JSON.stringify(generalData) %>" id="idSearchText" >
+                                      <option style="background-color:rgba(186, 90, 21, 0.748); font-size: large;" class="col-5 SearchTextBox text-light fw-LIGHTER" value=""> All Cities </option>
+                                        <% district.forEach(element=> { %>
+                                            <option style="background-color:rgba(186, 90, 21, 0.748); height: 100px;"class=" col-5 btn w-100 text-light fw-lighter" value="<%=element%>">
+                                        <%=element%>
+                                        </option>
+                                      <% }) %>
+                                    </select>
+                                    <button class="col-2 btn text-light bi bi-search" type="submit">
+                                      FIND
+                                    </button>
+                            </div>
+                            </form>  
+                        </div> 
+                      
+                      </div> 
+                      <% } else { %>
+                        <div class="carousel-item h-100 d-flex flex-column justify-content-center align-items-start h-100" style=" background-image: url('<%= element.image1 %>'); background-position: center; background-size: cover;">
+                          <div class="container-fluid w-100 col-lg-6 col-sm-12 rounded border " style="background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
+                            <form id="<%= element.CompanyID %>" action="/custom/customSearch"  method="post"></form>
+                            <div class="container-fluid col-12 btn d-flex">
+                                <h6 class="col-2 text-light ">Location </h6>
+                                    <select class="col-8  btn text-light fw-lighter"  name="ditrictName" type="text" data-hotels="<%= JSON.stringify(generalData) %>" id="idSearchText" >
+                                      <option style="background-color:rgba(186, 90, 21, 0.748); font-size: large;" class="col-5 SearchTextBox text-light fw-LIGHTER" value=""> All Cities </option>
+                                        <% district.forEach(element=> { %>
+                                        <option style="background-color:rgba(186, 90, 21, 0.748); height: 100px;"class=" col-5 btn w-100 text-light fw-lighter" value="<%=element%>">
+                                          <%=element%>
+                                        </option>
+                                      <% }) %>
+                                    </select>
+                                    <button class="col-2 btn text-light bi bi-search me-1" type="submit">
+                                      FIND
+                                    </button>
+                            </div>
+                            </form>  
+                          </div>  
+                          
+                        </div>
+                      <% } %>
+                      <% }) %>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <h1 class="text-light bottom" ><%= user %></h1>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  
+                  <button class="carousel-control-next  " type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                    <span class="carousel-control-next-icon " aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+            </div>
+        </div>
+        
+
+      
+
+
     <script src="/Script/Script_Signup.js"> </script>
     <script src="/Script/customerSearch.js"> </script>
     <script src="js/bootstrap.bundle.min.js"></script>
