--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -96,23 +96,23 @@
         <div class="modal-dialog "> <!-- Change modal-lg to modal-xl for an extra-large modal -->
             <div class="modal-content" style="background-color: rgba(72, 93, 74, 0.84); width:400px;">
                  <div class="modal-header">
-            <h5 class="modal-title txt text-light" id="exampleModalLabel">Sign in</h5> <br>
+                <h5 class="modal-title txt text-light" id="exampleModalLabel">Sign in</h5> <br>
             
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div> 
-            <div class="modal-body">
-            <div>
+            <div class="modal-body container-fluid">
+            <div class="container-fluid">
                 <small class="modal-title txt text-warning" id="exampleModalLabelHead"></small> <br>
                 <small class="txt text-light">Email</small>
             </div>
-            <div class="input-group flex-nowrap mb-1">
+            <div class=" container-fluid input-group flex-nowrap mb-1">
                 <button class="btn-light btn bi bi-envelope-at-fill col-4" >Email</button>
                 <input type="email" name="userName" id="idUserNameCustomer" class="btn btn-light" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
             </div>
-            <div>
+            <div class="container-fluid">
                 <small class="txt text-light">Password</small>
             </div>
-            <div class="input-group flex-nowrap  ">
+            <div class="container-fluid input-group flex-nowrap  ">
                 <button class="btn btn-light col-4 bi bi-key col-4" >Password</button> 
                 <input type="password" name="password" id="idUserPasswordcustomer" class="btn btn-light" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
             </div>
