--- a/views/adminlogin.ejs
+++ b/views/adminlogin.ejs
@@ -9,7 +9,7 @@
   }
 </style>
   <form id="loginform" action="#" method="post">
-    <div class="LoginPage d-flex justify-content-evenly" data-ride="carousel" style="background-position:center  ;background-size:cover; background-image: url('/Images/BackGround_Admin.jpg'  );">
+    <div class="container-flex LoginPage d-flex justify-content-evenly" data-ride="carousel" style="background-position:center  ;background-size:cover; background-image: url('/Images/BackGround_Admin.jpg'  );">
       <div class=" container-fluid" style="background-color: rgba(62, 62, 62, 0.668);">
         <div class="container-fluid d-flex flex-wrap " style="min-height: 100vh;margin-top: 25%; ">
           <div class="container col-md-9 col-lg-8 col-sm-12 ">
