--- a/views/custommerPage.ejs
+++ b/views/custommerPage.ejs
@@ -6,7 +6,7 @@
       
 
       
-        <div class="container-fluid"   style="height:730px;  background-position: center; background-size: cover;"> 
+        <div class="container-flex"   style="height:730px;  background-position: center; background-size: cover;"> 
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" style="height:730px" >
                   <div class="carousel-inner h-100 bg-secondary">
                     <% comp.forEach((element,index) => { %>
