--- a/views/detailedSearch.ejs
+++ b/views/detailedSearch.ejs
@@ -3,7 +3,7 @@
 
 <%- include('MenuBarCustomer') %>
     
-        <div class="container-fluid">
+        <div class="container-flex">
              <%  console.log(inputData) %>
                 <div class="container-fluid border rounded" style="background-color: rgba(65, 90, 69, 0.762) ; ">
                     <div class="col">
