--- a/views/MenuBarCustomer.ejs
+++ b/views/MenuBarCustomer.ejs
@@ -12,7 +12,7 @@
         font-family: Poppins;
     }
   </style> 
-<div class="container-fluid">
+<div class="container-flex">
   <nav class="navbar navbar-expand-lg" style="background-color: rgba(43, 59, 43, 0.796);">
     <div class="container-fluid">
         <small class="text text-light">
@@ -50,5 +50,5 @@
 </nav>
 
 </div>
-<body>
+ 
     
