--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -100,18 +100,18 @@
                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div> 
             <div class="modal-body container-fluid">
-            <div class="container-fluid col-12">
+            <div class="modal-body  col-12">
                 <small class="modal-title txt text-warning" id="exampleModalLabelHead"></small> <br>
                 <small class="txt text-light">Email</small>
             </div>
-            <div class=" container-fluid col-12 input-group flex-nowrap mb-1">
+            <div class=" modal-body col-12 input-group flex-nowrap mb-1">
                 <button class="btn-light btn bi bi-envelope-at-fill col-4" >Email</button>
                 <input type="email" name="userName" id="idUserNameCustomer" class="btn btn-light" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
             </div>
-            <div class="container-fluid col-12">
+            <div class="modal-body col-12">
                 <small class="txt text-light">Password</small>
             </div>
-            <div class="container-fluid col-12 input-group flex-nowrap  ">
+            <div class="modal-body col-12 input-group flex-nowrap  ">
                 <button class="btn btn-light col-4 bi bi-key col-4" >Password</button> 
                 <input type="password" name="password" id="idUserPasswordcustomer" class="btn btn-light" placeholder="Password" aria-label="Password" aria-describedby="addon-wrapping">
             </div>
