--- a/views/detailedSearch.ejs
+++ b/views/detailedSearch.ejs
@@ -6,10 +6,10 @@
         <div class="container-flex">
              <%  console.log(inputData) %>
                 <div class="container-fluid border rounded" style="background-color: rgba(65, 90, 69, 0.762) ; ">
-                    <div class="col">
+                    <div class="container-flex">
                         <!-- Main Search box Start here -->
                     <form action="/custom/customSearch" method="post"> 
-                        <div class=" row" >
+                        <div class="container-flex row">
                             <div class="border border-light rounded col d-flex" >
                                 <button type="button" class="input-group-text text-light btn"style="background-color: transparent;" id="iDServiceImages1btn2">Location</button>
                                 <select name="ditrictName" type="text" value="<%= inputData.ditrictName %>"  id="idDitrictName"
@@ -34,110 +34,99 @@
                                         <% }) %>
                                 </select>
                             </div>
-                            <div class="col d-flex"
+                            <div class="col d-flex container-fluid"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button type="button" class="input-group-text text-light btn"
+                                <button type="button" class="input-group-text text-light btn col-4"
                                     style="background-color: transparent;" id="iDServiceImages1btn2">Check-in</button>
-                                <input name="CheckinDate" id="idStartDate" type="datetime-local" value="<%=  inputData.CheckinDate  %>" class="text-light SearchTextBox ">
+                                <input name="CheckinDate" id="idStartDate" type="datetime-local" value="<%=  inputData.CheckinDate  %>" class="text-light SearchTextBox col-8">
                             </div>
 
-                            <div class="col d-flex"
+                            <div class="col d-flex container-fluid"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button type="button" class="input-group-text text-light btn"
+                                <button type="button" class="input-group-text text-light btn col-4"
                                     style="background-color: transparent;" id="iDServiceImages1btn2">Check-out</button>
-                                <input name="CheckoutDate" id="idEndDate" type="datetime-local" value="<%=  inputData.CheckoutDate  %>" class="text-light SearchTextBox ">
+                                <input name="CheckoutDate" id="idEndDate" type="datetime-local" value="<%=  inputData.CheckoutDate  %>" class="text-light SearchTextBox col-8">
                             </div>
-                            <div class="col d-flex"
+                            <div class="col d-flex container-fluid"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button type="button" class="input-group-text text-light btn"
+                                <button type="button" class="input-group-text text-light btn col-4"
                                     style="background-color: transparent;" id=" iDServiceImages1btn2">GUEST</button>
                                    
                                 <input id="idGuestCount" type="number" name="GuestCount" value="<%= inputData.GuestCount %>"
-                                    class="text-light    SearchTextBox">
+                                    class="text-light col-8    SearchTextBox">
                             </div>
-                            <div class="col d-flex"
+                            <div class="col d-flex container-fluid"
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                  
-                                <button type="button" class="input-group-text text-light btn "
+                                <button type="button" class="input-group-text text-light btn col-4 "
                                     style="background-color: transparent;" id=" iDServiceImages1btn2">ROOMS </button>
                                     <input id="idRoomCount" type="number" name="nameRoomCount" value="<%= inputData.nameRoomCount %>"
-                                    class="text-light    SearchTextBox">
+                                    class="text-light col-8    SearchTextBox">
                             </div>
                         </div>
-                        <div class="row" >
-                         
+                        <div class="container-flex row" >
                             <div class="col "
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <input id="idBudgetFrom"  style="background-color:rgba(36, 74, 36, 0);" type="number"
-                                value="<%=inputData.budgetStart %>"  onchange="" name="budgetStart" class="text-light  SearchTextBox">
-                                <button type="button" class="input-group-text text-light btn" id=" iDServiceImages1btn2">
-                                    <Main> Minimum Limit </Main>
-                                </button>
+                                <div class="container-flex d-flex">
+                                    <button type="button" class="input-group-text text-light btn col-4" id=" iDServiceImages1btn2">
+                                        <Main> Minimum Limit </Main>
+                                    </button>
+                                    <input id="idBudgetFrom"  style="background-color:rgba(36, 74, 36, 0);" type="number"
+                                    value="<%=inputData.budgetStart %>"  onchange="" name="budgetStart" class="text-light col-8  SearchTextBox">
+                                </div>
+                                
     
                             </div>
                             <div class="col "
                                 style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button type="button" class="input-group-text text-light btn " name="budgetend"
+                                <div class="container-flex d-flex">
+                                    <button type="button" class="input-group-text text-light btn col-4 " name="budgetend"
                                     id="iDServiceImages1btn2">Maximum 
                                     budget</button>
                                 <input id="idBudgetEnd" style="background-color:rgba(36, 74, 36, 0);" type="number"
-                                    onchange="" value="<%= inputData.budgetEnd  %>" name="budgetEnd" class="text-light SearchTextBox">
+                                    onchange="" value="<%= inputData.budgetEnd  %>" name="budgetEnd" class="text-light col-8 SearchTextBox">
+                                </div>
                             </div>
-                            <div class="col"
-                                style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button type="button" class="input-group-text text-light btn " id=" iDServiceImages1btn2">
-                                    category</button>
-                                <select id="idSelectTariff" class="input-group-text text-light btn"
-                                    name="roomCategoryID">
-                                    <option value="">All</option>
-                                    <% tariff.forEach(item=> { %>
-                                                <option value="<%= item.tariffIndex %>"> <%= item.tariffName %> </option>
-                                        <% }) %>
-                                </select>
+                            <div hidden class="col"style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
+                                <div class="container-flex d-flex">
+                                    <button type="button" class="input-group-text text-light btn col-4 " id=" iDServiceImages1btn2">
+                                        category</button>
+                                    <select id="idSelectTariff" class="input-group-text text-light btn col-8"
+                                        name="roomCategoryID">
+                                        <option value="">All</option>
+                                        <% tariff.forEach(item=> { %>
+                                                    <option value="<%= item.tariffIndex %>"> <%= item.tariffName %> </option>
+                                            <% }) %>
+                                    </select>
+                                </div>
                             </div>
-                            <div class="col "
+                            <div class="container-flex col "
                             style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
                                 <button  onclick=""  type="submit" class="btn h-100 w-100 text-light  bi bi-search "> LOAD </button>
                             </div>
-                     
-
                         </div>
                     </form> 
                         <!-- Main Search box Ends here -->
                     </div>
                 </div>
-             
-                                     
-                <!-- <div class="container-fluid border rounded d-flex   " style="  overflow: auto; flex-wrap: wrap;display: flex;" id="idTariffDetails">  -->
-                    <div class="container-fluid border w-100 rounded d-flex flex-wrap  col-12" style="overflow: auto; flex-wrap: wrap;" id="idTariffDetails">
+                    <div class="container-flex  border w-100 rounded d-flex flex-wrap  col-12"  id="idTariffDetails">
                         <% result.forEach(element => { %>
-                          <div class="card col-12  col-sm-6 col-md-4 col-lg-3  p-2">
-                                    <img class="w-100 rounded" style="height: 30%;" name="companyImage" value="<%= element.image1 %>" src="<%= element.image1 %>" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                      <h3 class="card-title" data-hotelTariffs="${result[i].tariffDetails}" style="text-transform: uppercase"> <%= element.lastName %></h3> <small class="card-text" style="text-transform: uppercase; height: fit-content;"  ><%= element.district %> </small> <br>
-                                      <small class="card-text bi bi-telephone-fill" style="height: fit-content;"  > <%= element.contactNumber %></small><br>
-                                      <small class="card-text bi bi-envelope-at"  style="height: fit-content;"  >  <%= element.email %> </small>
-                                      <div class="d-flex justify-content-center">
-                                        <h6 class="bi bi-star-fill text-warning"></h6>
-                                        <h6 class="bi bi-star-fill text-warning"></h6>
-                                        <h6 class="bi bi-star-fill text-warning"></h6>
-                                        <h6 class="bi bi-star-fill"></h6>
-                                        <h6 class="bi bi-star-fill"></h6>
-                                      </div>
-                                      <small class="card-text" ><%= element.Companydiscription %></small>
-                                      </div>
+                          <div class="card col-12 container-flex col-sm-6 col-md-4 col-lg-3 p-1"  >
+                                <div class="container-flex h-100"  >
+                                   <img class="w-100 rounded" style="height: 30%;" name="companyImage" value="<%= element.image1 %>" src="<%= element.image1 %>" class="card-img-top" alt="...">
+                                    <div class="card-body container-flex flex-wrap " style="overflow: hidden;"   >
+                                        <h3 class="card-title" onclick="drilldown('divHotel<%= element.CompanyID %>' ,'100')"  data-hotelTariffs="${result[i].tariffDetails}" style="text-transform: uppercase"> <%= element.lastName %></h3> <small class="card-text" style="text-transform: uppercase; height: fit-content;"  ><%= element.district %> </small> <br>
+                                        <small class="card-text bi bi-telephone-fill" style="height: fit-content;"  > <%= element.contactNumber %></small><br>
+                                        <small class="card-text bi bi-envelope-at"  style="height: fit-content;"  >  <%= element.email %> </small>
+                                        <small class="card-text" style="height:100px" id="divHotel<%= element.CompanyID %>" > <%= element.Companydiscription %>   </small>
+                                    </div>
+                                </div>
                                     <div class="card-footer">
-                                            <button name="submitCompanyDetails" value="<%=element.CompanyID%>"  onclick="loadHotelBasedResult(event.target.value)" type="button" value="<%=  element.CompanyID  %>" class="btn btn-primary">Details</button>
-                                       </div>
-                                  </div>
+                                        <button name="submitCompanyDetails" value="<%=element.CompanyID%>"  onclick="loadHotelBasedResult(event.target.value)" type="button" value="<%=  element.CompanyID  %>" class="btn btn-primary">Details</button>
+                                    </div>
+                                </div>
                                    
                             <% }) %>
-                                    
-                           
-
- 
-                     
-                     
                 </div>
                  
         </div>
